--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "gulp-watch": "^4.3.5",
     "gulp-sass": "^2.0.4"
   },
+  "engines": {
+    "node": ">=0.10.22",
+    "npm": ">=1.3.14"
+  },
   "scripts": {
     "lint": "eslint .",
     "start": "node keystone.js"
