--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "gulp-sass": "^2.0.4"
   },
   "engines": {
-    "node": ">=0.10.22",
-    "npm": ">=1.3.14"
+    "node": "6.9.1",
+    "npm": "3.10.11"
   },
   "scripts": {
     "lint": "eslint .",
