--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.13.1",
     "moment": "^2.10.6",
     "node-sass": "^3.3.2",
-    "node-sass-middleware": "^0.9.7"
+    "node-sass-middleware": "^0.9.7",
+    "request": "^2.87.0"
   },
   "devDependencies": {
     "eslint": "^2.12.0",
