--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.10.6",
     "node-sass": "^3.3.2",
     "node-sass-middleware": "^0.9.7",
+    "prismjs": "^1.15.0",
     "request": "^2.87.0"
   },
   "devDependencies": {
