--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.5",
     "keystone": "^0.3.19",
+    "keystone-email": "^1.1.0",
     "lodash": "^4.13.1",
     "moment": "^2.10.6",
     "node-sass": "^3.3.2",
